--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -5,8 +5,8 @@ nlu:
     - are you a bot?
     - am i speaking to an ai?
     - are you a human or a bot?
-    - are you real? 
-    - are you virtual? 
+    - are you real?
+    - are you virtual?
     - are you an ai?
     - aren't you a bot
     - are you a chatbot
@@ -21,6 +21,7 @@ nlu:
     - are you robot
     - are you sure that you're a bot?
     - bot?
+    - How are you?
 - intent: affirm
   examples: |
     - indeed
@@ -137,6 +138,7 @@ nlu:
     - Wait, I'll have to check my balance first. Can you do that please?
     - Hi, I need to know how much money is in my [checking](account_type) account
     - Balance please
+    - What's my account [balance]{"entity": "amount-of-money", "value": "current balance"}?
 - intent: check_earnings
   examples: |
     - How much money went into my account last month?
@@ -213,7 +215,6 @@ nlu:
     - good bye
     - good bye rasa bot!
     - good night
-    - goodbye
     - goodbye.
     - goodnight
     - gotta go
@@ -242,6 +243,11 @@ nlu:
     - welcome
     - howdy
     - good day
+    - How's it going?
+    - Hi Team
+    - Hello!
+    - Hello Ty
+    - Hey I love u
 - intent: inform
   examples: |
     - $10
@@ -554,8 +560,6 @@ nlu:
     - come back
     - cool! can I do something else here?
     - hello what can you do for me
-    - help
-    - help me
     - help please
     - help pls
     - help?
@@ -578,7 +582,6 @@ nlu:
     - talk to human
     - i want human :(
     - can i talk to human
-    - i want to talk to a human
     - i want to speak to human
     - can i talk to a real person?
     - connect me to a real person
@@ -615,10 +618,10 @@ nlu:
 - synonym: credit
   examples: |
     - credit card
+    - card
     - credit cards
     - credit account
     - credit accounts
-    - card
     - cards
     - credit card account
 - synonym: emblem
