--- a/.github/workflows/demo-cicd.yml
+++ b/.github/workflows/demo-cicd.yml
@@ -6,7 +6,10 @@ jobs:
   train_and_test:
     runs-on: ubuntu-latest
     steps:
-      - name: Train and Test the Bot
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+
+      - name: Train and Test the bot
         uses: RasaHQ/rasa-train-test-gha@main
         with:
           rasa_version: "2.8.2-full"
